--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <header>
     <h1>Jovani Kordun</h1>
     <p>Transformando ideias em projetos reais.</p>
-    <img src="https://i.pravatar.cc/150?img=3" alt="Avatar de Jovani" />
+    <img src="https://avatars.githubusercontent.com/u/106280897?s=400&u=b3b20033ee9968bb70ce595bd049927f05d405ea&v=4" alt="Imagem de Jovani" />
     <nav>
       <ul>
         <li><a href="#sobre">Sobre Mim</a></li>
@@ -65,7 +65,7 @@
   </aside>
 
   <footer id="contato">
-    <p>Contato: jovani@email.com</p>
+    <p>Contato: jovanikordun2013@email.com</p>
     <p>© 2025 Jovani Kordun</p>
   </footer>
 
